[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.133.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=0.2.2",
    "pdfplumber>=0.11.9",
    "uvicorn>=0.41.0",
    "python-multipart>=0.0.22",
    "streamlit>=1.28.1",
]
